Fixes wrong scroll-bar height when introduction message is visible

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,7 +15,7 @@
 }
 
 .divMessageIntro {
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
